# sbf

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  TODO  build.bat  build.pri  build.pro  build.sh  know_issues.md  sbf.cmake.in  sbf.profile  sonar-project.properties
common/: .SbfBuffer.h.swo  .SbfBuffer.h.swp  .sbfBuffer.h.swn  .sbfBuffer.h.swo  .sbfBuffer.h.swp  .sbfRefCount.h.swp  CMakeLists.txt  SbfBuffer.h  common.pro  sbfArguments.h  sbfArgumentsPrivate.h  sbfAtomic.h  sbfBuffer.c  sbfBuffer.h  sbfBufferInline.h  sbfCacheFile.c  sbfCacheFile.h  sbfCacheFilePrivate.h  sbfCommon.h  sbfCommonDarwin.h  sbfCommonLinux.c  sbfCommonLinux.h  sbfCommonWin32.c  sbfCommonWin32.h  sbfCpuFreq.c  sbfCpuFreq.h  sbfCsvParser.c  sbfCsvParser.h  sbfDeque.c  sbfDeque.h  sbfFatal.c  sbfFatal.h  sbfGuid.c  sbfGuid.h  sbfHugePages.c  sbfHugePages.h  sbfInterface.c  sbfInterface.h  sbfKeyValue.c  sbfKeyValue.h  (+32 more)
core/: CMakeLists.txt  core.pro  sbfEvent.c  sbfEvent.h  sbfEventPrivate.h  sbfHiResTimer.h  sbfHiResTimerPrivate.h  sbfMw.c  sbfMw.h  sbfMwInternal.h  sbfMwPrivate.h  sbfQueue.c  sbfQueue.h  sbfQueueLinux.h  sbfQueuePrivate.h  sbfQueueWin32.h  sbfTimer.c  sbfTimer.h  sbfTimerPrivate.h
cpp/: CMakeLists.txt  SbfBuffer.h  SbfCxxQueue.cpp  SbfCxxTcpConnection.cpp  SbfCxxTcpConnection.h  SbfCxxTimer.h  SbfCxxUdpConnection.h  SbfGuid.h  SbfKeyValue.h  SbfQueue.cpp  SbfQueue.h  SbfTcpConnection.cpp  SbfTcpConnection.h  SbfTcpListener.h
doc/: Doxyfile  sbf.eap  sbf.ldb
doc/doxygen/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  classes.html  conf_8py.html  conf_8py.js  conf_8py_source.html  dir_2c514969ae6cff6d8fc0eaac1ba2f514.html  (+662 more)
doc/sphinx/: conf.py  index.rst  make.bat
examples/: CMakeLists.txt
examples/connector/: CMakeLists.txt  tcpConnector.c
examples/publisher/: CMakeLists.txt  sbfPublisher.c  sbfPublisher.cpp
examples/queue/: .sbfQueue.c.swp  CMakeLists.txt  sbfQueue.c  sbfQueue.cpp
examples/replier/: CMakeLists.txt  sbfReplier.c  sbfReplier.cpp
examples/requester/: CMakeLists.txt  sbfRequester.cpp
examples/shm/: CMakeLists.txt  ShmClient.cc  shmBlockingClient.c  shmBlockingServer.c  shmClient.c  shmServer.c
examples/subscriber/: CMakeLists.txt  sbfSubscriber.c  sbfSubscriber.cpp
handlers/: CMakeLists.txt  handlers.pro
handlers/common/: CMakeLists.txt  common.pro  sbfCommonHandler.h
handlers/tcpmesh/: CMakeLists.txt  sbfTcpMeshHandler.c  sbfTcpMeshHandler.h  tcpmesh.pro
handlers/udp/: CMakeLists.txt  sbfUdpHandler.c  sbfUdpHandler.h  udp.pro
properties/: properties.pro  sbfProperties.h
requestreply/: CMakeLists.txt  requestreply.pro  sbfRequestPub.c  sbfRequestPub.h  sbfRequestPubPrivate.h  sbfRequestReply.h  sbfRequestReplyPrivate.h  sbfRequestSub.c  sbfRequestSub.h  sbfRequestSubPrivate.h
scripts/: cpuset.sh  makeVersionHeader.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  fgetln.c  getopt.c  sbfArguments.c  sbfAtomic.h  sbfBuffer.c  sbfBuffer.h  sbfBufferInline.h  sbfCacheFile.c  sbfCommon.h  sbfCommonDarwin.c  sbfCommonDarwin.h  sbfCommonLinux.h  sbfCommonWin32.h  sbfCsvParser.h  sbfDeque.h  sbfDequePrivate.h  sbfFatal.c  sbfHugePages.c  sbfHugePages.h  sbfInterface.c  sbfInterface.h  sbfKeyValue.c  sbfKeyValue.h  sbfKeyValuePrivate.h  sbfLog.h  sbfLogFile.c  sbfLogFile.h  sbfLogFilePrivate.h  sbfLogPrivate.h  sbfMemory.c  sbfMemory.h  sbfNumberString.h  sbfPerfCounter.h  sbfPoolInline.h  sbfProperties.c  sbfProperties.h  sbfSharedMemoryRingBuffer.c  sbfSharedMemoryRingBuffer.h  sbfSharedMemoryRingBufferPrivate.h  (+9 more)
src/core/: CMakeLists.txt  sbfEvent.c  sbfEvent.h  sbfEventPrivate.h  sbfHiResTimer.c  sbfMw.c  sbfMw.h  sbfMwPrivate.h  sbfQueue.c  sbfQueue.h  sbfQueueDarwin.h  sbfQueueLinux.h  sbfQueuePrivate.h  sbfQueueWin32.h  sbfTimer.c  sbfTimer.h  sbfTimerPrivate.h
src/cpp/: CMakeLists.txt  SbfBuffer.cpp  SbfBuffer.hpp  SbfGuid.hpp  SbfKeyValue.cpp  SbfKeyValue.hpp  SbfLog.cpp  SbfLog.hpp  SbfMw.cpp  SbfMw.hpp  SbfPub.cpp  SbfPub.hpp  SbfQueue.cpp  SbfQueue.hpp  SbfRequestPub.cpp  SbfRequestPub.hpp  SbfRequestSub.cpp  SbfRequestSub.hpp  SbfSharedMemory.hpp  SbfSub.cpp  SbfSub.hpp  SbfTcpConnection.hpp  SbfTcpListener.hpp  SbfTimer.cpp  SbfTimer.hpp  SbfTport.cpp  SbfTport.hpp
src/cpp/bindings/: CMakeLists.txt  sbf.i  sbf.java.i  sbf.py.i  swigBuffer.h
src/cpp/bindings/java/: CMakeLists.txt  build.sh  run.sh
src/cpp/bindings/java/examples/: publisher.java  queue.java  replier.java  requester.java  subscriber.java
src/cpp/bindings/python/: CMakeLists.txt
src/cpp/bindings/python/examples/: publisher.py  queue.py  replier.py  requester.py  subscriber.py
src/handlers/common/: CMakeLists.txt  sbfCommonHandler.c  sbfCommonHandler.h  sbfCommonHandlerPrivate.h
src/handlers/tcpmesh/: CMakeLists.txt  sbfTcpMeshHandler.c  sbfTcpMeshHandler.h
src/network/: CMakeLists.txt  sbfTcpConnection.c  sbfTcpConnectionPrivate.h  sbfTcpListener.c  sbfTcpListenerPrivate.h  sbfUdpMulticast.c  sbfUdpMulticast.h  sbfUdpMulticastPrivate.h
src/requestreply/: CMakeLists.txt  sbfRequestPub.c  sbfRequestReply.c  sbfRequestReplyPrivate.h  sbfRequestSub.h  sbfRequestSubPrivate.h
src/transport/: CMakeLists.txt  sbfBatch.c  sbfBatch.h  sbfHandler.c  sbfHandler.h  sbfPub.c  sbfPub.h  sbfPubPrivate.h  sbfSub.c  sbfSub.h  sbfTopic.h  sbfTopicPrivate.h  sbfTport.h  sbfTportFragments.c  sbfTportPrivate.h  sbfTportWeight.c
tools/: CMakeLists.txt  tools.pro
tools/connector/: CMakeLists.txt  tcpConnector.c
tools/listener/: CMakeLists.txt
tools/publisher/: CMakeLists.txt  publisher.pro  sbfPublisher.c
tools/replier/: CMakeLists.txt  replier.pro  sbfReplier.c
tools/requester/: CMakeLists.txt  requester.pro  sbfRequester.c
tools/subscriber/: CMakeLists.txt  sbfSubscriber.c  subscriber.pro
transport/: CMakeLists.txt  sbfBatch.h  sbfBatchPrivate.h  sbfHandler.c  sbfHandler.h  sbfHandlerInternal.h  sbfPub.c  sbfPub.h  sbfPubPrivate.h  sbfSub.c  sbfSub.h  sbfSubPrivate.h  sbfTopic.c  sbfTopic.h  sbfTport.c  sbfTport.h  sbfTportPrivate.h  sbfTportWeight.c  transport.pro
(+297 files in other folders)
